# breast-cancer-segmentation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
architecture/: unet.py
scripts/: data_prep.sh  merge.py  preprocess.py  train.py
src/ai/: CustomDataset.py  __init__.py  callback.py  mergeMasks.py  metrics.py  model.py  segmentation_module.py  transforms.py  utils.py
